--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
-    "@material-ui/core": "^3.0.2",
+    "@blueprintjs/core": "^3.5.1",
+    "@blueprintjs/docs-theme": "^3.0.1",
+    "@blueprintjs/table": "^3.1.1",
     "@types/jest": "^23.3.1",
     "@types/node": "^10.9.4",
     "@types/react": "^16.4.13",
